--- a/src/styles/birman/index.styl
+++ b/src/styles/birman/index.styl
@@ -25,7 +25,7 @@ hover-button(button, color, text=null) {
 	&,
 	&_single-w {
 		margin:(-(margin));
-		line-height:20px;
+		line-height:19px;
 	}
 
 	&__widget {
@@ -34,7 +34,7 @@ hover-button(button, color, text=null) {
 		background:bg_color;
 		border:1px solid border_color;
 		border-radius:3px;
-		line-height:18px;
+		line-height:19px;
 
 		+link-hovers() {
 			tweak-inverted-text();
@@ -53,8 +53,7 @@ hover-button(button, color, text=null) {
 	}
 
 	&__button {
-		margin:-1px;
-		padding:1px 6px 2px 20px;
+		padding:1px 6px 1px 20px;
 		font-weight:normal;
 		border-right:0;
 	}
